# IPO-Risk-Engine

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PRD.md  README.md  V1_2_PLAN.md  progress.txt  pyproject.toml  requirements.txt
.claude/: settings.local.json
archive/old_prd/: IPO_Hand_Engine_PRD_v0.1.md  PRD_integrated.md
archive/v0_daily_pipeline/: calendar.py  core_daily.py  render.py  retrieval.py  schema.py  snapshots.py  test_core_daily.py  test_snapshots_retrieval.py
archive/v0_scripts/: build_snapshots_small.py  feature_smoke_pltr.py  ingest_daily_pltr.py  retrieval_demo_pltr.py  test_returns_pltr.py
archive/v0_scripts/state_inference/: build_features.py  simulate.py  test_leakage.py  train.py  visualize.py
archive/v0_state_inference/sim/: events.py  generator.py  regime.py
archive/v0_state_inference/state_data/: build_supervised.py  schema.py
docs/: MODEL_CARD.md  PREFLOP_STREET_PLAN.md  RESULTS_SUMMARY.md  V1_LOCK.md
scripts/: build_dataset.py  build_ipo_universe.py  build_preflop_metadata.py  build_universe_edgar.py  run_baselines.py  run_challenger_eval.py  run_falsification_checks.py  run_full_pipeline.py  run_pilot.py  run_preflop_v1_eval.py  run_stability_report.py  smoke_fetch_bars.py  smoke_test_bars.py  test_flop_features.py  test_forward_labels.py  test_forward_mdd.py  test_ingest.py  test_river_features.py  test_schema_validation.py  test_snapshot_builder.py  test_streets.py  test_streets_pltr.py  test_turn_features.py  validate_universe_alpaca.py
scripts/maintenance/: augment_preflop_v1.py  fix_dropped_features.py
(+22 files in other folders)
